syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

import "dnf/v1/common.proto";
import "dnf/v1/inventory_types.proto";
import "dnf/v1/gameplay_types.proto";
import "dnf/v1/skill.proto";
import "dnf/v1/character.proto";
import "dnf/v1/achievement.proto";
import "dnf/v1/welfare.proto";

message AccountTicket {
  string dungeontype = 1;
  int32 count = 2;
}

message ActionCountInfo {
  int32 combocount = 1;
  int32 aerialcount = 2;
  int32 overkillcount1 = 3;
  int32 overkillcount2 = 4;
  int32 countercount = 5;
  int32 backattackcount = 6;
  int32 crowdcontrolcount = 7;
  int32 justevadecount = 8;
}

message ActiveStatusDamage {
  uint32 type = 1;
  int32 damage = 2;
  int32 skillindex = 3;
  int32 itemindex = 4;
  int32 victimguid = 5;
  uint32 victimtype = 6;
  uint32 tickcount = 7;
}

message AiCharacterDetailInfo {
  uint64 charguid = 1;
  string name = 2;
  int32 growtype = 3;
  int32 secondgrowtype = 4;
  int32 exp = 5;
  int32 hp = 6;
  int32 mp = 7;
  int32 level = 8;
  int32 job = 9;
  int32 equipscore = 10;
  int32 score = 11;
  int32 count = 12;
  int64 date = 13;
  int32 spoint = 14;
  int32 adventureunionlevel = 15;
  int64 adventureunionexp = 16;
  repeated Skill skilllist = 17;
  repeated Equip equiplist = 18;
  repeated Creature creaturelist = 19;
  repeated Artifact cartifactlist = 20;
  repeated AvatarItem avatarlist = 21;
  repeated SkinItem skinlist = 22;
  int32 world = 23;
  uint64 gguid = 24;
  string gname = 25;
  string gmastername = 26;
  int32 gmembergrade = 27;
  uint64 blackdiamond = 28;
  uint32 avatarVisibleFlags = 29;
  int32 gamecenterinfo = 30;
  int32 qqVipinfo = 31;
  repeated Equip equipskinlist = 32;
  repeated AvatarItem avatarskinlist = 33;
  int32 totallike = 34;
  int32 like = 35;
  int32 rank = 36;
  repeated Chivalry info = 37;
  int32 communionlevel = 38;
  repeated AvatarItem sdavatarlist = 39;
}

message AllSkillSlot {
  repeated SkillSlotInfo active = 1;
  repeated SkillSlotInfo buff = 2;
  repeated SkillSlotInfo combo = 3;
  repeated SkillSlotMatching keyboardmatching = 4;
  repeated SkillSlotMatching padmatching = 5;
}

message AltarInfo {
  int32 index = 1;
  int32 scramble = 2;
  int32 poolindex = 3;
  int32 state = 4;
  int64 endtime = 5;
  BattlefieldTeamInfo red = 6;
  BattlefieldTeamInfo blue = 7;
}

message ApcCharacter {
  uint64 charguid = 1;
  int32 hp = 2;
  int32 mp = 3;
  int32 job = 4;
  int32 level = 5;
  int32 exp = 6;
  int32 growtype = 7;
  int32 secondgrowtype = 8;
  string name = 9;
  EquipList equiplist = 10;
  Skills skilllist = 11;
  uint64 ownerguid = 12;
  int32 teamtype = 13;
  int32 objectguid = 14;
  int32 equipscore = 15;
}

message ApcInfo {
  uint64 charguid = 1;
  string name = 2;
  int32 growtype = 3;
  int32 secondgrowtype = 4;
  int32 level = 5;
  int32 job = 6;
  int32 equipscore = 7;
  int32 count = 8;
  int64 date = 9;
  repeated Skill skilllist = 10;
  EquipList equiplist = 11;
  repeated AvatarItem avatarlist = 12;
}

message Appendage {
  int32 appendageindex = 1;
  int32 count = 2;
}

message ArcadePvpInfoCurrency {
  int32 index = 1;
  int32 count = 2;
}

message ArtifactBaseOption {
  int32 option = 1;
  int32 rarity = 2;
  bool locked = 3;
}

message AttachCrackRequest {
  int32 index = 1;
  int32 slot = 2;
}

message AttackSquadAdvertisement {
  bool register = 1;
}

message AttackSquadBoardInfo {
  uint64 rpguid = 1;
  string rpname = 2;
  int32 membercount = 3;
  int32 antievilscore = 4;
  int32 publictype = 5;
  int32 status = 6;
  int32 raidindex = 7;
  bool chivalry = 8;
  uint64 leaderguid = 9;
  bool started = 10;
  repeated AttackSquadBoardUserInfo memberinfos = 11;
}

message AttackSquadBoardUserInfo {
  int32 job = 1;
  int32 growtype = 2;
}

message AttackSquadDetailInfo {
  uint64 rpguid = 1;
  string rpname = 2;
  int32 membercount = 3;
  int32 antievilscore = 4;
  int32 publictype = 5;
  int32 status = 6;
  int32 phasestatus = 7;
  int64 changetime = 8;
  string leadername = 9;
  uint64 leaderguid = 10;
  int32 world = 11;
  int32 channel = 12;
  string ip = 13;
  uint32 port = 14;
  repeated AttackSquadMemberInfo users = 15;
  bool started = 16;
}

message AttackSquadMemberInfo {
  uint64 partyguid = 1;
  int32 partyindex = 2;
  int32 partyslot = 3;
  GroupMember user = 4;
  int64 disconnecttime = 5;
  int32 rewardconditioncount = 6;
}

message AttackSquadTimer {
  int64 breakuptime = 1;
}

message AuctionBase {
  uint64 guid = 1;
  int32 upgrade = 2;
  int32 quality = 3;
  int32 endurance = 4;
  int32 enchant = 5;
  int32 reforge = 6;
  int32 amplify = 7;
  int32 aoption = 8;
  repeated Emblem emblem = 9;
  repeated Stackable card = 10;
  int32 scount = 11;
  int32 tcount = 12;
  int64 expiretime = 13;
  bool rappearance = 14;
  repeated RandomOptionItem roption = 15;
  int32 skin = 16;
  uint64 skinguid = 17;
  bool locked = 18;
  bool seal = 19;
  int32 type = 20;
  uint64 auid = 21;
  uint64 bidder = 22;
  int32 price = 23;
  uint64 enddate = 24;
  int32 registcount = 25;
  int32 tera = 26;
  int32 buyprice = 27;
  bool flag = 28;
  int32 index = 29;
  int32 count = 30;
  int32 season = 31;
}

message AuctionEquip {
  uint64 guid = 1;
  int32 upgrade = 2;
  int32 quality = 3;
  int32 endurance = 4;
  int32 reforge = 5;
  int32 amplify = 6;
  int32 aoption = 7;
  repeated Emblem emblem = 8;
  repeated Stackable card = 9;
  int32 scount = 10;
  int32 tcount = 11;
  int64 expiretime = 12;
  bool rappearance = 13;
  repeated RandomOptionItem roption = 14;
  int32 skin = 15;
  uint64 skinguid = 16;
  bool locked = 17;
  bool seal = 18;
  int32 enchantindex = 19;
  int32 enchant = 20;
  int32 type = 21;
  uint64 auid = 22;
  uint64 bidder = 23;
  int32 price = 24;
  uint64 enddate = 25;
  int32 registcount = 26;
  int32 tera = 27;
  int32 buyprice = 28;
  int32 flag = 29;
  int32 index = 30;
  int32 count = 31;
  int32 season = 32;
}

message AuctionItemIndex {
  int32 index = 1;
  int32 qty = 2;
}

message AuctionStackable {
  uint64 guid = 1;
  int32 upgrade = 2;
  int32 quality = 3;
  int32 endurance = 4;
  int32 reforge = 5;
  int32 amplify = 6;
  int32 aoption = 7;
  repeated Emblem emblem = 8;
  repeated Stackable card = 9;
  int32 scount = 10;
  int32 tcount = 11;
  int64 expiretime = 12;
  bool rappearance = 13;
  repeated RandomOptionItem roption = 14;
  int32 skin = 15;
  uint64 skinguid = 16;
  bool locked = 17;
  bool seal = 18;
  int32 enchantindex = 19;
  int32 enchant = 20;
  int32 type = 21;
  uint64 auid = 22;
  uint64 bidder = 23;
  int32 price = 24;
  uint64 enddate = 25;
  int32 registcount = 26;
  int32 tera = 27;
  int32 buyprice = 28;
  int32 flag = 29;
  int32 index = 30;
  int32 count = 31;
  int32 season = 32;
}

message AvatarComposeMaterial {
  int32 index = 1;
  int32 count = 2;
}

message AvatarDisassembledMaterial {
  int32 index = 1;
  int32 count = 2;
}

message AvatarGuid {
  uint64 guid = 1;
}

message AvatarItem {
  int32 index = 1;
  int32 count = 2;
  uint64 guid = 3;
  uint64 expiretime = 4;
  int32 option = 5;
  bool locked = 6;
  int32 scount = 7;
  int32 tcount = 8;
  int32 sindex = 9;
}

message BattlefieldStateInfo {
  int32 battlefield = 1;
  int32 scramble = 2;
  int32 slotindex = 3;
  int32 state = 4;
  int64 endtime = 5;
  BattlefieldTeamInfo red = 6;
  BattlefieldTeamInfo blue = 7;
  bool garrison = 8;
}

message BattlefieldTeamInfo {
  int32 state = 1;
  int32 win = 2;
  uint64 date = 3;
  int32 count = 4;
  int32 clearcount = 5;
}

message BattleleagueBuff {
  int32 index = 1;
  int32 customvalue = 2;
}

message BattleleagueContribute {
  uint64 charguid = 1;
  int32 contribution = 2;
}

message BattleleaguePveRecord {
  uint64 charguid = 1;
  int32 contribution = 2;
}

message BattleleaguePvpRecord {
  uint64 charguid = 1;
  int32 contribution = 2;
}

message BattleleagueReward {
  int32 index = 1;
  int32 count = 2;
}

message SkillSlotMatching {
  int32 index = 1;
  int32 slot = 2;
}

message GroupMember {
  uint64 charguid = 1;
  string name = 2;
  int32 job = 3;
  int32 level = 4;
}

message Emblem {
  int32 index = 1;
  int32 count = 2;
}

message RandomOptionItem {
  int32 index = 1;
  int32 value = 2;
}

message Chivalry {
  int32 index = 1;
  int32 value = 2;
}

message EquipList {
  repeated Equip equips = 1;
}

message Skills {
  repeated Skill skills = 1;
}
